# noGojira

./: .gitignore  AGENT_PM_PRD.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  llm.txt  mcp_config.example.json  pyproject.toml  rxconfig.py
.github/: SETUP.md
.github/workflows/: test-and-merge.yml  test-main.yml
nogojira/: __init__.py  nogojira.py
src/: __init__.py  cli.py  database.py  events.py  models.py  server.py  store.py  web.py
tests/: __init__.py  test_database.py  test_events.py  test_models.py  test_store.py  test_store_events.py
